# bale

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
bale/: __init__.py  _rpc.py  auth.py  bale_ext_pb2.py  bale_methods.py  bale_pb2.py  client.py  envelope.py  events.py  normalize.py  peer.py  services.py  transport.py  types.py
docs/: API_COVERAGE.md  API_FA.md
examples/: echo_bot.py  login.py  messages.py  quickstart.py  raw_rpc.py  send_message.py  smoke_test.py  tui.py
proto/: bale.proto  bale_ext.proto
tests/: test_offline.py
